<resources>
    <!--activity main-->
    <string name="app_name">05WidgetButton</string>
    <string name="imgButton">Image Button</string>
    <string name="radio_button">Radio Button</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="not_red">Not Red</string>
    <string name="not_yellow">Not Yellow</string>
    <string name="not_blue">Not Blue</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="set_color_chosen_above">Set Color Chosen Above</string>
</resources>
