<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3pt"
    tools:context="com.example.kienpt.a05widgetbutton.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:text="@string/imgButton" />

        <ImageButton
            android:id="@+id/ibtn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/box_red" />

        <ImageButton
            android:id="@+id/ibtn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/box_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:text="@string/radio_button" />

        <RadioGroup
            android:id="@+id/rdg_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2pt">

            <RadioButton
                android:id="@+id/rd_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/rd_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <RadioButton
                android:id="@+id/rd_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:text="@string/toggle_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/tbtn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/not_red"
            android:textOn="@string/red" />

        <ToggleButton
            android:id="@+id/tbtn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/not_yellow"
            android:textOn="@string/yellow" />

        <ToggleButton
            android:id="@+id/tbtn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/not_blue"
            android:textOn="@string/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rdButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:text="@string/radio_button" />

        <RadioGroup
            android:id="@+id/rdg_color2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2pt">

            <RadioButton
                android:id="@+id/rd_red2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/rd_yellow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <RadioButton
                android:id="@+id/rd_blue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_setColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_color_chosen_above" />

    <TextView
        android:id="@+id/tv_showColor"
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:layout_margin="10pt" />

</LinearLayout>
